@@ -162,6 +162,24 @@ name|solrj
 operator|.
 name|request
 operator|.
+name|CollectionAdminRequest
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|client
+operator|.
+name|solrj
+operator|.
+name|request
+operator|.
 name|QueryRequest
 import|;
 end_import
@@ -181,6 +199,24 @@ operator|.
 name|request
 operator|.
 name|UpdateRequest
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|client
+operator|.
+name|solrj
+operator|.
+name|response
+operator|.
+name|CollectionAdminResponse
 import|;
 end_import
 
@@ -1526,6 +1562,15 @@ name|SolrServerException
 throws|,
 name|IOException
 block|{
+if|if
+condition|(
+name|random
+argument_list|()
+operator|.
+name|nextBoolean
+argument_list|()
+condition|)
+block|{
 name|ModifiableSolrParams
 name|params
 init|=
@@ -1611,6 +1656,42 @@ name|request
 argument_list|)
 decl_stmt|;
 block|}
+else|else
+block|{
+name|CollectionAdminResponse
+name|resp
+init|=
+name|CollectionAdminRequest
+operator|.
+name|CreateAlias
+operator|.
+name|createAlias
+argument_list|(
+name|alias
+argument_list|,
+name|collections
+argument_list|,
+name|createNewSolrServer
+argument_list|(
+literal|""
+argument_list|,
+name|getBaseUrl
+argument_list|(
+operator|(
+name|HttpSolrServer
+operator|)
+name|clients
+operator|.
+name|get
+argument_list|(
+literal|0
+argument_list|)
+argument_list|)
+argument_list|)
+argument_list|)
+decl_stmt|;
+block|}
+block|}
 DECL|method|deleteAlias
 specifier|private
 name|void
@@ -1623,6 +1704,15 @@ throws|throws
 name|SolrServerException
 throws|,
 name|IOException
+block|{
+if|if
+condition|(
+name|random
+argument_list|()
+operator|.
+name|nextBoolean
+argument_list|()
+condition|)
 block|{
 name|ModifiableSolrParams
 name|params
@@ -1699,6 +1789,38 @@ argument_list|(
 name|request
 argument_list|)
 decl_stmt|;
+block|}
+else|else
+block|{
+name|CollectionAdminResponse
+name|resp
+init|=
+name|CollectionAdminRequest
+operator|.
+name|deleteAlias
+argument_list|(
+name|alias
+argument_list|,
+name|createNewSolrServer
+argument_list|(
+literal|""
+argument_list|,
+name|getBaseUrl
+argument_list|(
+operator|(
+name|HttpSolrServer
+operator|)
+name|clients
+operator|.
+name|get
+argument_list|(
+literal|0
+argument_list|)
+argument_list|)
+argument_list|)
+argument_list|)
+decl_stmt|;
+block|}
 block|}
 DECL|method|indexDoc
 specifier|protected
